Use trello api for getting issues and to join jobs that fail with open issues
Change-Id: I8a5a185c73b0fa81de7f21001503e70107e2d12b

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "async": "^2.0.0-rc.6",
-    "node-libcurl": "^1.0.0"
+    "node-libcurl": "^1.0.0",
+    "node-trello": "^1.1.2"
   },
   "devDependencies": {}
 }
